✨ Add the Asset Image
